--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/src/main/resources/application-development.properties
