--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,7 @@ fabric.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
 /src/main/resources/application-development.properties
+.idea
+*.iml
