--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mitchtalmadge.apps.discord</groupId>
     <artifactId>professor_doge</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.0</version>
     <packaging>jar</packaging>
 
     <properties>
